--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="btLogin">INICIAR SESION</string>
     <string name="etNombreUsuario">Ingrese Usuario</string>
     <string name="etClaveUsuario">Ingrese Clave</string>
+    <string name="etClaveUsuarioLand">Ingrese Clave</string>
 </resources>
