--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="etNombreUsuario">Ingrese Usuario</string>
     <string name="etClaveUsuario">Ingrese Clave</string>
     <string name="etClaveUsuarioLand">Ingrese Clave</string>
+    <string name="Agregar">Agregar</string>
 </resources>
